--- a/pages/18586.html
+++ b/pages/18586.html
@@ -317,7 +317,7 @@ margin-left: 0em;
 <h2 id='properties'>Properties</h2>
 
 <h3 id='IntegralRepresentations'>Integral representations</h3>
-<div class='maruku-equation' id='eq:J0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_990a6f9b82d2ce10e6cef714ab0061ffff979c17_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>J</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mfrac><mn>2</mn><mi>π</mi></mfrac><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>sin</mi><mrow><mo>(</mo><mi>x</mi><mspace width='thinmathspace'></mspace><mi>cosh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation' id='eq:J0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(1)</span><math class='maruku-mathml' display='block' id='mathml_57e83eb62b38ee89fafc899f2ff4fb37b764d04e_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>J</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mfrac><mn>2</mn><mi>π</mi></mfrac><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>sin</mi><mrow><mo>(</mo><mi>x</mi><mspace width='thinmathspace'></mspace><mi>cosh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
   
   J_0(x)
   \;=\;
@@ -335,7 +335,7 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>(<a href='#DLMF'>DLMF</a> <a href='http://dlmf.nist.gov/10.9#E9'>10.9.9</a>)</p>
-<div class='maruku-equation' id='eq:N0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(2)</span><math class='maruku-mathml' display='block' id='mathml_990a6f9b82d2ce10e6cef714ab0061ffff979c17_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>N</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>≔</mo><msub><mi>Y</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo>−</mo><mfrac><mn>2</mn><mi>π</mi></mfrac><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>cos</mi><mrow><mo>(</mo><mi>x</mi><mspace width='thinmathspace'></mspace><mi>cosh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation' id='eq:N0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(2)</span><math class='maruku-mathml' display='block' id='mathml_57e83eb62b38ee89fafc899f2ff4fb37b764d04e_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>N</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mo>≔</mo><msub><mi>Y</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mo>−</mo><mfrac><mn>2</mn><mi>π</mi></mfrac><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>cos</mi><mrow><mo>(</mo><mi>x</mi><mspace width='thinmathspace'></mspace><mi>cosh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
   
   N_0(x)
   \coloneqq
@@ -355,7 +355,7 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>(<a href='#DLMF'>DLMF</a> <a href='http://dlmf.nist.gov/10.9#E9'>10.9.9</a>)</p>
-<div class='maruku-equation' id='eq:K0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(3)</span><math class='maruku-mathml' display='block' id='mathml_990a6f9b82d2ce10e6cef714ab0061ffff979c17_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>K</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>cos</mi><mrow><mo>(</mo><mi>x</mi><mspace width='thinmathspace'></mspace><mi>sinh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation' id='eq:K0AsIntSinOfxCoshtdt'><span class='maruku-eq-number'>(3)</span><math class='maruku-mathml' display='block' id='mathml_57e83eb62b38ee89fafc899f2ff4fb37b764d04e_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>K</mi> <mn>0</mn></msub><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>cos</mi><mrow><mo>(</mo><mi>x</mi><mspace width='thinmathspace'></mspace><mi>sinh</mi><mo stretchy='false'>(</mo><mi>t</mi><mo stretchy='false'>)</mo><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>dt</mi><mphantom><mi>AAAA</mi></mphantom><mtext>if</mtext><mspace width='thinmathspace'></mspace><mspace width='thinmathspace'></mspace><mi>x</mi><mo>&gt;</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>
   
   K_0(x)
   \;=\;
@@ -390,6 +390,8 @@ margin-left: 0em;
 <ul>
 <li>
 <p>Milton Abramowitz, Irene Stegun, sections 9, 10, 11 of_Handbook of mathematical functions_, 1964 (<a href='http://people.math.sfu.ca/~cbm/aands/abramowitz_and_stegun.pdf'>pdf</a>)</p>
+
+<p>chapter 9: F. W. J. Olver, <em>Bessel functions of integer order</em> (<a href='http://www.dam.brown.edu/people/mariom/AM282-01/HANDOUTS/Abramowitz_Stegun_Chapter_9.pdf'>pdf</a>)</p>
 </li>
 
 <li>
@@ -420,14 +422,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on November 25, 2017 21:50:43 
+  Revised on November 26, 2017 18:04:06 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (94.220.82.107)
+  (178.9.127.239)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bessel+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bessel+function/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Bessel+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bessel+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Bessel+function" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bessel+function/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Bessel+function" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bessel+function" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
