--- a/pages/1788.html
+++ b/pages/1788.html
@@ -308,7 +308,7 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_b64ea74aba556d473c70e89a2ae5a707d17ed289_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mo>∫</mo><mfrac><mrow><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>x</mi> <mi>μ</mi></msup></mrow></msup></mrow><mrow><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup></mrow></mfrac><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>x</mi> <mi>μ</mi></msup><mo>−</mo><mi>τ</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup></mrow></msup><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>exp</mi><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>τ</mi><mrow><mo>(</mo><msup><mi>k</mi> <mi>μ</mi></msup><mo>−</mo><mstyle displaystyle='false'><mfrac><mi>i</mi><mrow><mn>2</mn><mi>τ</mi></mrow></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><mo>)</mo></mrow><mrow><mo>(</mo><msub><mi>k</mi> <mi>μ</mi></msub><mo>−</mo><mstyle displaystyle='false'><mfrac><mi>i</mi><mrow><mn>2</mn><mi>τ</mi></mrow></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><mo>)</mo></mrow><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>4</mn><mi>τ</mi></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>exp</mi><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>τ</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>4</mn><mi>τ</mi></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>exp</mi><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>τ</mi><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>4</mn><mi>τ</mi></mfrac></mstyle><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi><mfrac><mn>1</mn><mrow><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup></mrow></mfrac><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><mn>4</mn><msqrt><mrow><msup><mi>k</mi> <mn>2</mn></msup></mrow></msqrt><msqrt><mrow><msup><mi>x</mi> <mn>2</mn></msup></mrow></msqrt><msub><mi>K</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msub><mrow><mo>(</mo><mn>4</mn><msqrt><mrow><msup><mi>k</mi> <mn>2</mn></msup></mrow></msqrt><msqrt><mrow><msup><mi>x</mi> <mn>2</mn></msup></mrow></msqrt><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mfrac><mrow><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mrow><mrow><msup><mi>k</mi> <mn>2</mn></msup></mrow></mfrac></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+    <div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_96259ba09d0f670d802de0ae716e96491c3434c3_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mo>∫</mo><mfrac><mrow><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>x</mi> <mi>μ</mi></msup></mrow></msup></mrow><mrow><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup></mrow></mfrac><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>x</mi> <mi>μ</mi></msup><mo>−</mo><mi>τ</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup></mrow></msup><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>exp</mi><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>τ</mi><mrow><mo>(</mo><msup><mi>k</mi> <mi>μ</mi></msup><mo>−</mo><mstyle displaystyle='false'><mfrac><mi>i</mi><mrow><mn>2</mn><mi>τ</mi></mrow></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><mo>)</mo></mrow><mrow><mo>(</mo><msub><mi>k</mi> <mi>μ</mi></msub><mo>−</mo><mstyle displaystyle='false'><mfrac><mi>i</mi><mrow><mn>2</mn><mi>τ</mi></mrow></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><mo>)</mo></mrow><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>4</mn><mi>τ</mi></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>exp</mi><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>τ</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>4</mn><mi>τ</mi></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>exp</mi><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>τ</mi><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>4</mn><mi>τ</mi></mfrac></mstyle><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi><mfrac><mn>1</mn><mrow><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup></mrow></mfrac><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><mn>4</mn><msqrt><mrow><msup><mi>k</mi> <mn>2</mn></msup></mrow></msqrt><msqrt><mrow><msup><mi>x</mi> <mn>2</mn></msup></mrow></msqrt><msub><mi>K</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mn>1</mn></mrow></msub><mrow><mo>(</mo><mn>4</mn><msqrt><mrow><msup><mi>k</mi> <mn>2</mn></msup></mrow></msqrt><msqrt><mrow><msup><mi>x</mi> <mn>2</mn></msup></mrow></msqrt><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mfrac><mrow><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mrow><mrow><msup><mi>k</mi> <mn>2</mn></msup></mrow></mfrac></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
   \begin{aligned}
     \int
     \frac{
@@ -379,17 +379,91 @@ margin-left: 0em;
 
 </annotation></semantics></math></div>
 <p>where the last step is <a href='http://dlmf.nist.gov/10.32#E10'>DLMF 10.32.10</a></p>
+
+<p id='second'>second attempt</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_96259ba09d0f670d802de0ae716e96491c3434c3_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mo>∫</mo><mfrac><mrow><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>x</mi> <mi>μ</mi></msup></mrow></msup></mrow><mrow><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup><mo>+</mo><msup><mi>m</mi> <mn>2</mn></msup></mrow></mfrac><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><msup><mi>e</mi> <mrow><mi>i</mi><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>x</mi> <mi>μ</mi></msup><mo>−</mo><mi>τ</mi><mo stretchy='false'>(</mo><msub><mi>k</mi> <mi>μ</mi></msub><msup><mi>k</mi> <mi>μ</mi></msup><mo>+</mo><msup><mi>m</mi> <mn>2</mn></msup><mo stretchy='false'>)</mo></mrow></msup><mspace width='thinmathspace'></mspace><mfrac><mrow><mi>d</mi><mi>τ</mi></mrow><mi>τ</mi></mfrac><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><mi>exp</mi><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>τ</mi><mrow><mo>(</mo><msup><mi>k</mi> <mi>μ</mi></msup><mo>−</mo><mstyle displaystyle='false'><mfrac><mi>i</mi><mrow><mn>2</mn><mi>τ</mi></mrow></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><mo>)</mo></mrow><mrow><mo>(</mo><msub><mi>k</mi> <mi>μ</mi></msub><mo>−</mo><mstyle displaystyle='false'><mfrac><mi>i</mi><mrow><mn>2</mn><mi>τ</mi></mrow></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><mo>)</mo></mrow><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>4</mn><mi>τ</mi></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub><mo>−</mo><mi>τ</mi><msup><mi>m</mi> <mn>2</mn></msup><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi><mspace width='thinmathspace'></mspace><msup><mi>d</mi> <mrow><mi>p</mi><mo>+</mo><mn>1</mn></mrow></msup><mi>k</mi></mtd></mtr> <mtr><mtd></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo stretchy='false'>(</mo><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mn>2</mn></mrow></msup><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><msup><mi>τ</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mn>2</mn></mrow></msup><mi>exp</mi><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>τ</mi><msup><mi>m</mi> <mn>2</mn></msup><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>4</mn><mi>τ</mi></mfrac></mstyle><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mi>d</mi><mi>τ</mi></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo stretchy='false'>(</mo><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mn>2</mn></mrow></msup><msubsup><mo>∫</mo> <mn>0</mn> <mn>∞</mn></msubsup><msup><mi>τ</mi> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mn>2</mn></mrow></msup><mi>exp</mi><mrow><mo>(</mo><mo lspace='verythinmathspace' rspace='0em'>−</mo><mi>τ</mi><mo>−</mo><mstyle displaystyle='false'><mfrac><mn>4</mn><mi>τ</mi></mfrac></mstyle><msup><mi>m</mi> <mn>2</mn></msup><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub><mo>)</mo></mrow><mspace width='thinmathspace'></mspace><mfrac><mrow><mi>d</mi><mi>τ</mi></mrow><mrow><msup><mi>m</mi> <mn>2</mn></msup></mrow></mfrac></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mfrac><mn>1</mn><mrow><msup><mi>m</mi> <mn>2</mn></msup><mo stretchy='false'>(</mo><mi>π</mi><msup><mo stretchy='false'>)</mo> <mrow><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mn>2</mn></mrow></msup></mrow></mfrac><mfrac><mn>1</mn><mn>2</mn></mfrac><msup><mrow><mo>(</mo><mfrac><mrow><mi>m</mi><msqrt><mrow><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub></mrow></msqrt></mrow><mn>2</mn></mfrac><mo>)</mo></mrow> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mn>2</mn><mo>+</mo><mn>1</mn></mrow></msup><msub><mi>K</mi> <mrow><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mn>2</mn><mo>−</mo><mn>1</mn></mrow></msub><mrow><mo>(</mo><mi>m</mi><msqrt><mrow><msup><mi>x</mi> <mi>μ</mi></msup><msub><mi>x</mi> <mi>μ</mi></msub></mrow></msqrt><mo>)</mo></mrow></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'>
+  \begin{aligned}
+    \int
+    \frac{
+      e^{i k_\mu x^\mu}
+    }{
+      k_\mu k^\mu + m^2
+    }
+    \, d^{p+1}k
+    &amp; =
+    \int
+    \int_0^\infty
+      e^{
+         i k_\mu x^\mu
+         -
+         \tau
+         (k_\mu k^\mu + m^2)
+      }
+    \, \frac{d \tau}{\tau}
+    \, d^{p+1} k
+    \\
+    &amp; =
+    \int
+    \int_0^\infty
+      \exp\left(
+         -
+         \tau
+         \left(
+            k^\mu - \tfrac{i}{2 \tau} x^\mu
+         \right)
+         \left(
+            k_\mu - \tfrac{i}{2 \tau} x^\mu
+         \right)
+         -
+         \tfrac{4}{\tau} x^\mu x_\mu - \tau m^2
+      \right)
+      \, d \tau
+      \, d^{p+1} k
+     \\
+    \\
+    &amp; =
+    (\pi)^{(p+1)/2}
+    \int_0^\infty
+      \tau^{-(p+1)/2}
+      \exp\left(
+         -\tau m^2
+         -
+         \tfrac{4}{\tau} x^\mu x_\mu
+      \right)
+      \, d \tau
+    \\
+    &amp; =
+    (\pi)^{(p+1)/2}
+    \int_0^\infty
+      \tau^{-(p+1)/2}
+      \exp\left(
+         -\tau
+         -
+         \tfrac{4}{\tau} m^2 x^\mu x_\mu
+      \right)
+      \, \frac{d \tau}{m^2}
+    \\
+    &amp; =
+    \frac{1}{m^2 (\pi)^{(p+1)/2}}
+    \frac{1}{2} \left(\frac{m\sqrt{x^\mu x_\mu}}{2}\right)^{-(p+1)/2+1}
+    K_{(p+1)/2-1}\left(m \sqrt{x^\mu x_\mu}\right)
+  \end{aligned}
+
+</annotation></semantics></math></div>
+<p>where the last step is <a href='http://dlmf.nist.gov/10.32#E10'>DLMF 10.32.10</a></p>
+
+<p>this diverges for <math class='maruku-mathml' display='inline' id='mathml_96259ba09d0f670d802de0ae716e96491c3434c3_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msup><mi>x</mi> <mn>2</mn></msup><mo>→</mo><mn>0</mn></mrow><annotation encoding='application/x-tex'>x^2 \to 0</annotation></semantics></math> as <math class='maruku-mathml' display='inline' id='mathml_96259ba09d0f670d802de0ae716e96491c3434c3_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>(</mo><msup><mi>x</mi> <mn>2</mn></msup><msup><mo stretchy='false'>)</mo> <mrow><mo lspace='verythinmathspace' rspace='0em'>−</mo><mo stretchy='false'>(</mo><mi>p</mi><mo>+</mo><mn>1</mn><mo stretchy='false'>)</mo><mo stretchy='false'>/</mo><mn>2</mn><mo>+</mo><mn>1</mn></mrow></msup></mrow><annotation encoding='application/x-tex'>(x^2)^{-(p+1)/2 + 1}</annotation></semantics></math> (<a href='http://dlmf.nist.gov/10.30#E2'>DLMF 10.30.2</a>)</p>
 </div>
 
 <div class="revisedby">
-  Revised on November 26, 2017 17:27:39 
+  Revised on November 26, 2017 18:30:23 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
   (178.9.127.239)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1290" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1290 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1291" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1291 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
