--- a/pages/18801.html
+++ b/pages/18801.html
@@ -308,7 +308,30 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <h2 id='related_concepts'>Related concepts</h2>
+    <h2 id='definitions'>Definitions</h2>
+
+<p>The <em>hyperbolic sine function</em> is the <a class='existingWikiWord' href='/nlab/show/function'>function</a> <math class='maruku-mathml' display='inline' id='mathml_58078a5b790044540655868be095a72e0226a773_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sinh</mi><mspace width='thickmathspace'></mspace><mo lspace='verythinmathspace'>:</mo><mspace width='thickmathspace'></mspace><mi>ℝ</mi><mo>→</mo><mi>ℝ</mi></mrow><annotation encoding='application/x-tex'>\sinh \;\colon\; \mathbb{R} \to \mathbb{R}</annotation></semantics></math> from the <a class='existingWikiWord' href='/nlab/show/real+number'>real numbers</a> to themselves which is characterized by the following condition:</p>
+
+<ol>
+<li>
+<p><math class='maruku-mathml' display='inline' id='mathml_58078a5b790044540655868be095a72e0226a773_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sinh</mi></mrow><annotation encoding='application/x-tex'>\sinh</annotation></semantics></math> is the unique <a class='existingWikiWord' href='/nlab/show/solution'>solution</a> among <a class='existingWikiWord' href='/nlab/show/smooth+map'>smooth functions</a> to the <a class='existingWikiWord' href='/nlab/show/differential+equation'>differential equation</a>/<a class='existingWikiWord' href='/nlab/show/initial+value+problem'>initial value problem</a></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_58078a5b790044540655868be095a72e0226a773_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>sinh</mi><mo>″</mo><mo>=</mo><mi>sinh</mi></mrow><annotation encoding='application/x-tex'> 
+  sinh&#39;&#39; = sinh 
+
+</annotation></semantics></math></div>
+<p>(where a prime indicates the <a class='existingWikiWord' href='/nlab/show/derivative'>derivative</a>) subject to the initial conditions</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_58078a5b790044540655868be095a72e0226a773_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mi>sinh</mi><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mn>0</mn></mtd></mtr> <mtr><mtd><mi>sinh</mi><mo>′</mo><mo stretchy='false'>(</mo><mn>0</mn><mo stretchy='false'>)</mo></mtd> <mtd><mo>=</mo><mn>1</mn><mspace width='thinmathspace'></mspace><mo>.</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
+  \begin{aligned}
+    sinh(0) &amp;= 0
+    \\
+    sinh&#39;(0) &amp; = 1
+    \,.
+  \end{aligned}
+
+</annotation></semantics></math></div></li>
+</ol>
+
+<h2 id='related_concepts'>Related concepts</h2>
 
 <ul>
 <li>
@@ -337,14 +360,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on November 24, 2017 16:30:27 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.8)
+  Revised on November 27, 2017 08:54:57 
+  by <span class="newWikiWord">Anthony Hart<a href="/nlab/new/Anthony+Hart">?</a></span>
+  (2600:8800:5888:8200:188f:7912:80fa:de33)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/hyperbolic+sine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/hyperbolic+sine" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/hyperbolic+sine/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/hyperbolic+sine" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/hyperbolic+sine" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
