--- a/pages/10285.html
+++ b/pages/10285.html
@@ -315,21 +315,31 @@ margin-left: 0em;
 <h2 id='related_entries'>related entries</h2>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a></li>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/supermanifold'>supermanifold</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Peierls+bracket'>Peierls bracket</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Feynman+propagator'>Feynman propagator</a></p>
+</li>
 </ul>
 
 <p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 </div>
 
 <div class="revisedby">
-  Created on August 30, 2013 16:18:22 
+  Revised on November 28, 2017 05:15:57 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (89.204.154.236)
+  (46.183.103.8)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Bryce+DeWitt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Bryce+DeWitt" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Bryce+DeWitt/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/Bryce+DeWitt" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Bryce+DeWitt" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
