--- a/pages/272.html
+++ b/pages/272.html
@@ -319,9 +319,37 @@ margin-left: 0em;
 
 <h2 id='concepts'>Concepts</h2>
 
+<p><strong><a class='existingWikiWord' href='/nlab/show/field+theory'>field theory</a></strong>: <a class='existingWikiWord' href='/nlab/show/classical+field+theory'>classical</a>, <a class='existingWikiWord' href='/nlab/show/prequantum+field+theory'>pre-quantum</a>, <a class='existingWikiWord' href='/nlab/show/quantum+field+theory'>quantum</a>, <a class='existingWikiWord' href='/nlab/show/perturbative+quantum+field+theory'>perturbative quantum</a></p>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a></strong></p>
+
 <ul>
 <li>
-<p><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a>, <a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
+<p><a class='existingWikiWord' href='/nlab/show/field+bundle'>field bundle</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Lagrangian+density'>Lagrangian density</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a>, <a class='existingWikiWord' href='/nlab/show/pre-symplectic+current'>presymplectic current</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/locally+variational+field+theory'>locally variational field theory</a></p>
+</li>
+
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/phase+space'>covariant phase space</a></p>
+</li>
+</ul>
+
+<p><strong><a class='existingWikiWord' href='/nlab/show/quantum+mechanics'>quantum mechanical system</a></strong></p>
+
+<ul>
+<li>
+<p><a class='existingWikiWord' href='/nlab/show/subsystem'>subsystem</a></p>
 </li>
 
 <li>
@@ -1188,7 +1216,7 @@ margin-left: 0em;
 
 <h2 id='properties'>Properties</h2>
 
-<p>Generically the algebra of a relativistic AQFT turns out to be a (<a class='existingWikiWord' href='/nlab/show/generalized+the'>the</a>) hyperfinite type <math class='maruku-mathml' display='inline' id='mathml_cef3a681357ceb2cc5313d29edd34433ce2ac1ed_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>III</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>III_1</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra+factor'>von Neumann algebra factor</a>. See (<a href='#Yngvason'>Yngvason</a>)</p>
+<p>Generically the algebra of a relativistic AQFT turns out to be a (<a class='existingWikiWord' href='/nlab/show/generalized+the'>the</a>) hyperfinite type <math class='maruku-mathml' display='inline' id='mathml_1ab03aaed2992784791bed87c65be7390a5315c7_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>III</mi> <mn>1</mn></msub></mrow><annotation encoding='application/x-tex'>III_1</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra+factor'>von Neumann algebra factor</a>. See (<a href='#Yngvason'>Yngvason</a>)</p>
 
 <h2 id='Examples'>Examples</h2>
 
@@ -1196,11 +1224,11 @@ margin-left: 0em;
 
 <h3 id='FreeScalarField'>Free scalar field / Klein Gordon field</h3>
 
-<p>A survey of the AQFT description of the free scalar field on <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> is in (<a href='#Montoya'>Motoya, slides 11-17</a>). Discussion in more general context of <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a> in (<a href='#BrunettiFredenhagen'>Brunetti-Fredenhagen, section 5.2</a>)</p>
+<p>A survey of the AQFT description of the <span class='newWikiWord'>free<a href='/nlab/new/free+field+theor'>?</a></span> <a class='existingWikiWord' href='/nlab/show/scalar+field'>scalar field</a> on <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski spacetime</a> is in (<a href='#Montoya'>Motoya, slides 11-17</a>). Discussion in more general context of <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a> in (<a href='#BrunettiFredenhagen'>Brunetti-Fredenhagen, section 5.2</a>)</p>
 
 <h3 id='free_fermion__dirac_field'>Free fermion / Dirac field</h3>
 
-<p>The free <a class='existingWikiWord' href='/nlab/show/fermion'>fermion</a> / Dirac field and its deformations is discussed for instance in (<a href='#DLM'>DLM, section 3.2</a>), (<a href='#Dimock82'>Dimock 83</a>).</p>
+<p>The <a class='existingWikiWord' href='/nlab/show/free+field+theory'>free</a> <a class='existingWikiWord' href='/nlab/show/Dirac+field'>Dirac field</a> and its deformations is discussed for instance in (<a href='#DLM'>DLM, section 3.2</a>), (<a href='#Dimock82'>Dimock 83</a>).</p>
 
 <h3 id='electromagnetic_field'>Electromagnetic field</h3>
 
@@ -1275,7 +1303,13 @@ margin-left: 0em;
 <p>The original article that introduced the <a class='existingWikiWord' href='/nlab/show/Haag-Kastler+axioms'>Haag-Kastler axioms</a> is</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Rudolf+Haag'>Rudolf Haag</a>, <a class='existingWikiWord' href='/nlab/show/Daniel+Kastler'>Daniel Kastler</a>, <em>An algebraic approach to quantum field theory</em> , Journal of Mathematical Physics, Bd.5, 1964, S.848-861</li>
+<li id='Haag64'><a class='existingWikiWord' href='/nlab/show/Rudolf+Haag'>Rudolf Haag</a>, <a class='existingWikiWord' href='/nlab/show/Daniel+Kastler'>Daniel Kastler</a>, <em>An algebraic approach to quantum field theory</em> , Journal of Mathematical Physics, Bd.5, 1964, S.848-861</li>
+</ul>
+
+<p>following</p>
+
+<ul>
+<li id='Haag59'><a class='existingWikiWord' href='/nlab/show/Rudolf+Haag'>Rudolf Haag</a>, <em>Discussion des “axiomes” et des propriétés asymptotiques d’une théorie des champs locales avec particules composées, Les Problèmes Mathématiques de la Théorie Quantique des Champs</em>, Colloque Internationaux du CNRS LXXV (Lille 1957), CNRS Paris (1959), 151.</li>
 </ul>
 
 <p>The generalization of the <a class='existingWikiWord' href='/nlab/show/spacetime'>spacetime</a> <a class='existingWikiWord' href='/nlab/show/site'>site</a> from open in <a class='existingWikiWord' href='/nlab/show/Minkowski+space'>Minkowski space</a> to more general and <a class='existingWikiWord' href='/nlab/show/curvature'>curved</a> spacetimes (see <a class='existingWikiWord' href='/nlab/show/AQFT+on+curved+spacetimes'>AQFT on curved spacetimes</a>) is due to</p>
@@ -1507,7 +1541,7 @@ margin-left: 0em;
 <p>A relation to <a class='existingWikiWord' href='/nlab/show/FQFT'>FQFT</a> is discussed in</p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/Urs+Schreiber'>Urs Schreiber</a>, <em>AQFT from <math class='maruku-mathml' display='inline' id='mathml_cef3a681357ceb2cc5313d29edd34433ce2ac1ed_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-functorial QFT</em> , Comm. Math. Phys., Volume 291, Issue 2, pp.357-401 (<a href='http://ncatlab.org/schreiber/files/AQFTfromFQFT.pdf'>pdf</a>)</li>
+<li><a class='existingWikiWord' href='/nlab/show/Urs+Schreiber'>Urs Schreiber</a>, <em>AQFT from <math class='maruku-mathml' display='inline' id='mathml_1ab03aaed2992784791bed87c65be7390a5315c7_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-functorial QFT</em> , Comm. Math. Phys., Volume 291, Issue 2, pp.357-401 (<a href='http://ncatlab.org/schreiber/files/AQFTfromFQFT.pdf'>pdf</a>)</li>
 </ul>
 
 <p>The role of <a class='existingWikiWord' href='/nlab/show/von+Neumann+algebra+factor'>von Neumann algebra factor</a>s is discussed in</p>
@@ -1522,14 +1556,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on September 18, 2017 16:31:12 
+  Revised on November 28, 2017 07:43:00 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (77.56.177.247)
+  (46.183.103.17)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/AQFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT/62" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(62 revisions)</span> | <a href="/nlab/show/diff/AQFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/AQFT" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/AQFT/63" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(63 revisions)</span> | <a href="/nlab/show/diff/AQFT" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/AQFT" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
