--- a/pages/8972.html
+++ b/pages/8972.html
@@ -326,7 +326,7 @@ margin-left: 0em;
 <p><a class='existingWikiWord' href='/nlab/show/sequent'>hypothetical judgement</a>, <a class='existingWikiWord' href='/nlab/show/sequent'>sequent</a></p>
 
 <ul>
-<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_4e8b0f07127ae053eeff7cfd525a473398b1ac4a_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
+<li><a class='existingWikiWord' href='/nlab/show/antecedent'>antecedents</a> <math class='maruku-mathml' display='inline' id='mathml_4a27a695ba89dfe47684acacd8abbea80b700a67_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊢</mo></mrow><annotation encoding='application/x-tex'>\vdash</annotation></semantics></math> <a class='existingWikiWord' href='/nlab/show/consequent'>consequent</a>, <a class='existingWikiWord' href='/nlab/show/succedent'>succedents</a></li>
 </ul>
 </li>
 </ul>
@@ -485,7 +485,7 @@ margin-left: 0em;
 
 <p>lays the foundations of the theory of <a class='existingWikiWord' href='/nlab/show/programming+language'>programming languages</a> in terms of <a class='existingWikiWord' href='/nlab/show/type+theory'>type theory</a>. In over 500 pages, the author formally specifies and step-by-step extends established type systems and reasons about type safety and operational semantics (not so much dependent types and categorical semantics). The book also contains a discussion of logic in type theory and features of variants of the Algol programming language, in particular.</p>
 
-<p>The first edition (2012) is available as a <a href='http://www.cs.cmu.edu/~rwh/plbook/book.pdf'>pdf</a>. A description of the changes is <a href='https://existentialtype.wordpress.com/2016/04/11/practical-foundations-of-programming-languages-second-edition/'>here</a>.</p>
+<p>The preview of the second edition (2016) is available as a <a href='https://www.cs.cmu.edu/~rwh/pfpl/2nded.pdf'>pdf</a>. A description of the changes is <a href='https://existentialtype.wordpress.com/2016/04/11/practical-foundations-of-programming-languages-second-edition/'>here</a>.</p>
 
 <h2 id='related_entries'>Related entries</h2>
 
@@ -500,14 +500,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Revised on July 11, 2016 14:33:25 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (96.127.209.218)
+  Revised on November 28, 2017 11:50:18 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (91.101.250.252)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Practical+Foundations+for+Programming+Languages" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Practical+Foundations+for+Programming+Languages/5" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(5 revisions)</span> | <a href="/nlab/show/diff/Practical+Foundations+for+Programming+Languages" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Practical+Foundations+for+Programming+Languages" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Practical+Foundations+for+Programming+Languages" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Practical+Foundations+for+Programming+Languages/6" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(6 revisions)</span> | <a href="/nlab/show/diff/Practical+Foundations+for+Programming+Languages" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Practical+Foundations+for+Programming+Languages" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
