--- a/pages/1788.html
+++ b/pages/1788.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -309,16 +309,16 @@ margin-left: 0em;
 
 <div id="revision">
     <p>…</p>
-<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4143642420a2e48fee6df49299a4ffee636d61e6_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>δ</mi><mo>,</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>[</mo><mi>δ</mi><mo>,</mo><mo stretchy='false'>]</mo></mrow><annotation encoding='application/x-tex'>
   [\delta, ]
 
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4143642420a2e48fee6df49299a4ffee636d61e6_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>s</mi> <mi>BV</mi></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mfrac><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mi>L</mi></mrow><mrow><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow></mfrac><mfrac><mo>∂</mo><mrow><mo>∂</mo><msup><mover><mi>ϕ</mi><mo>¯</mo></mover> <mi>a</mi></msup></mrow></mfrac></mrow><annotation encoding='application/x-tex'>  
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>s</mi> <mi>BV</mi></msub><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><mfrac><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mi>L</mi></mrow><mrow><mi>δ</mi><msup><mi>ϕ</mi> <mi>a</mi></msup></mrow></mfrac><mfrac><mo>∂</mo><mrow><mo>∂</mo><msup><mover><mi>ϕ</mi><mo>¯</mo></mover> <mi>a</mi></msup></mrow></mfrac></mrow><annotation encoding='application/x-tex'>  
   s_{BV}
   \;=\;
   \frac{\delta_{EL}L}{\delta \phi^a}
   \frac{\partial}{\partial \overline{\phi}^a}
 
-</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_4143642420a2e48fee6df49299a4ffee636d61e6_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mrow><mo>[</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>2</mn></mfrac></mstyle><mo>∫</mo><mo>∫</mo><msubsup><mi>Δ</mi> <mi>F</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msubsup><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>Φ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>Φ</mi> <mi>b</mi></msup><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mo>∫</mo><mi>P</mi><msup><mi>Φ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mover><mi>Φ</mi><mo>¯</mo></mover> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo></mrow></mfrac><mi>dvol</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mo>]</mo></mrow></mtd> <mtd><mo>=</mo><mo>∫</mo><mo>∫</mo><mo>∫</mo><munder><munder><mrow><msubsup><mi>Δ</mi> <mi>F</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msubsup><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><msub><mi>P</mi> <mi>y</mi></msub></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><mi>δ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></munder><mi>δ</mi><mo stretchy='false'>(</mo><mi>y</mi><mo>−</mo><mi>z</mi><mo stretchy='false'>)</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>Φ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mover><mi>Φ</mi><mo>¯</mo></mover> <mi>b</mi></msup><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>Φ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mover><mi>Φ</mi><mo>¯</mo></mover> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mrow><mtable columnalign='right left right left right left right left right left' columnspacing='0em' displaystyle='true'><mtr><mtd><mrow><mo>[</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>2</mn></mfrac></mstyle><mo>∫</mo><mo>∫</mo><msubsup><mi>Δ</mi> <mi>F</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msubsup><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>Φ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>Φ</mi> <mi>b</mi></msup><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mspace width='thickmathspace'></mspace><mo>,</mo><mspace width='thickmathspace'></mspace><mo>∫</mo><mi>P</mi><msup><mi>Φ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mover><mi>Φ</mi><mo>¯</mo></mover> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo></mrow></mfrac><mi>dvol</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo><mo>]</mo></mrow></mtd> <mtd><mo>=</mo><mo>∫</mo><mo>∫</mo><mo>∫</mo><munder><munder><mrow><msubsup><mi>Δ</mi> <mi>F</mi> <mrow><mi>a</mi><mi>b</mi></mrow></msubsup><mo stretchy='false'>(</mo><mi>x</mi><mo>,</mo><mi>y</mi><mo stretchy='false'>)</mo><msub><mi>P</mi> <mi>y</mi></msub></mrow><mo>⏟</mo></munder><mrow><mo>=</mo><mi>δ</mi><mo stretchy='false'>(</mo><mi>x</mi><mo>−</mo><mi>y</mi><mo stretchy='false'>)</mo></mrow></munder><mi>δ</mi><mo stretchy='false'>(</mo><mi>y</mi><mo>−</mo><mi>z</mi><mo stretchy='false'>)</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>Φ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mover><mi>Φ</mi><mo>¯</mo></mover> <mi>b</mi></msup><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>y</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>z</mi><mo stretchy='false'>)</mo></mtd></mtr> <mtr><mtd></mtd> <mtd><mo>=</mo><mo>∫</mo><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mi>Φ</mi> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mfrac><mi>δ</mi><mrow><mi>δ</mi><msup><mover><mi>Φ</mi><mo>¯</mo></mover> <mi>a</mi></msup><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mrow></mfrac><mspace width='thinmathspace'></mspace><mi>dvol</mi><mo stretchy='false'>(</mo><mi>x</mi><mo stretchy='false'>)</mo></mtd></mtr></mtable></mrow></mrow><annotation encoding='application/x-tex'> 
   \begin{aligned}
     \left[
       \tfrac{1}{2}\int \int \Delta^{a b}_F(x,y) \frac{\delta}{\delta \Phi^a(x)} \frac{\delta}{\delta \Phi^b(y)}
@@ -345,17 +345,76 @@ margin-left: 0em;
  \end{aligned}
 
 </annotation></semantics></math></div>
+<p><math class='maruku-mathml' display='inline' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+
+<div class='num_example' id='ElectromagnetismEl'>
+<h6 id='example'>Example</h6>
+
+<p><strong>(<a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+form'>Euler-Lagrange form</a> for <a class='existingWikiWord' href='/nlab/show/free+field'>free</a> <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a>)</strong></p>
+
+<p>Consider the <a class='existingWikiWord' href='/nlab/show/Lagrangian+quantum+field+theory'>Lagrangian field theory</a> of <a class='existingWikiWord' href='/nlab/show/free+field'>free</a> <a class='existingWikiWord' href='/nlab/show/electromagnetism'>electromagnetism</a> from example \ref{ElectromagnetismLagrangianDensity}.</p>
+
+<p>The <a class='existingWikiWord' href='/nlab/show/Euler-Lagrange+complex'>Euler-Lagrange variational derivative</a> is</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mstyle mathvariant='bold'><mi>L</mi></mstyle><mspace width='thickmathspace'></mspace><mo>=</mo><mspace width='thickmathspace'></mspace><msubsup><mi>f</mi> <mrow><mo>,</mo><mi>μ</mi></mrow> <mrow><mi>μ</mi><mi>ν</mi></mrow></msubsup><mi>δ</mi><msub><mi>a</mi> <mi>ν</mi></msub><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \delta_{EL} \mathbf{L}
+  \;=\;
+  f^{\mu \nu}_{,\mu} \delta a_\nu
+  \,.
+
+</annotation></semantics></math></div>
+<p>Hence the <a class='existingWikiWord' href='/nlab/show/shell'>shell</a> (eq:ShellInJetBundle) in this case is</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>ℰ</mi><mo>=</mo><mi>Σ</mi><mo>×</mo><mrow><mo>{</mo><mrow><mo>(</mo><mo stretchy='false'>(</mo><msub><mi>a</mi> <mi>μ</mi></msub><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><msub><mi>a</mi> <mrow><mi>μ</mi><mo>,</mo><msub><mi>μ</mi> <mn>1</mn></msub></mrow></msub><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><msub><mi>a</mi> <mrow><mi>μ</mi><mo>,</mo><msub><mi>μ</mi> <mn>1</mn></msub><msub><mi>μ</mi> <mn>2</mn></msub></mrow></msub><mo stretchy='false'>)</mo><mo>,</mo><mi>⋯</mi><mo>)</mo></mrow><mspace width='thickmathspace'></mspace><mo stretchy='false'>|</mo><mspace width='thickmathspace'></mspace><msup><mi>f</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msup><msub><mrow></mrow> <mrow><mo>,</mo><mi>μ</mi></mrow></msub><mo>=</mo><mn>0</mn><mo>}</mo></mrow><mspace width='thickmathspace'></mspace><mo>⊂</mo><mspace width='thickmathspace'></mspace><msubsup><mi>J</mi> <mi>Σ</mi> <mn>∞</mn></msubsup><mo stretchy='false'>(</mo><msup><mi>T</mi> <mo>*</mo></msup><mi>Σ</mi><mo stretchy='false'>)</mo><mspace width='thinmathspace'></mspace><mo>.</mo></mrow><annotation encoding='application/x-tex'>
+  \mathcal{E}
+    =
+  \Sigma \times 
+  \left\{ 
+    \left(
+       (a_\mu) , (a_{\mu,\mu_1}), (a_{\mu,\mu_1 \mu_2}), \cdots
+     \right) 
+     \;\vert\;  f^{\mu \nu}{}_{,\mu} = 0 \right\}
+  \;\subset\;
+  J^\infty_\Sigma(T^\ast \Sigma)
+  \,.
+
+</annotation></semantics></math></div></div>
+
+<div class='proof'>
+<h6 id='proof'>Proof</h6>
+
+<p>sss</p>
+</div>
+
+<p><math class='maruku-mathml' display='inline' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_7' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mspace width='thinmathspace'></mspace></mrow><annotation encoding='application/x-tex'>\,</annotation></semantics></math></p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_8' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo stretchy='false'>{</mo><msub><mi>b</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub><mo>,</mo><mo stretchy='false'>(</mo><msub><mi>b</mi> <mrow><mi>μ</mi><mi>ν</mi><mo>,</mo><msub><mi>μ</mi> <mn>1</mn></msub></mrow></msub><mo stretchy='false'>)</mo><mo>,</mo><mo stretchy='false'>(</mo><msub><mi>b</mi> <mrow><mi>μ</mi><mi>ν</mi><mo>,</mo><msub><mi>μ</mi> <mn>1</mn></msub><msub><mi>μ</mi> <mn>2</mn></msub></mrow></msub><mo stretchy='false'>)</mo><mo>,</mo><mi>⋯</mi><mo stretchy='false'>}</mo></mrow><annotation encoding='application/x-tex'>
+  \{b_{\mu \nu}, (b_{\mu \nu, \mu_1}), (b_{\mu \nu, \mu_1 \mu_2}), \cdots\}
+
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_9' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><msub><mi>h</mi> <mrow><mi>μ</mi><mi>ν</mi><mi>ρ</mi></mrow></msub><mo>≔</mo><msub><mi>b</mi> <mrow><mo stretchy='false'>[</mo><mi>μ</mi><mi>ν</mi><mo>,</mo><mi>ρ</mi><mo stretchy='false'>]</mo></mrow></msub></mrow><annotation encoding='application/x-tex'>
+  h_{\mu \nu \rho}
+  \coloneqq
+  b_{[\mu \nu, \rho]}
+
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_10' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>L</mi><mo>≔</mo><mstyle displaystyle='false'><mfrac><mn>1</mn><mn>2</mn></mfrac></mstyle><msub><mi>h</mi> <mrow><mi>μ</mi><mi>ν</mi><mi>ρ</mi></mrow></msub><msup><mi>h</mi> <mrow><mi>μ</mi><mi>ν</mi><mi>ρ</mi></mrow></msup></mrow><annotation encoding='application/x-tex'>
+  L 
+   \coloneqq
+  \tfrac{1}{2} h_{\mu \nu \rho} h^{\mu \nu \rho}
+
+</annotation></semantics></math></div><div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_421231ba8f9208d604535677a3f0f6c8708bf847_11' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mrow><msub><mi>δ</mi> <mi>EL</mi></msub><mi>L</mi></mrow><mrow><mi>δ</mi><msub><mi>b</mi> <mrow><mi>μ</mi><mi>ν</mi></mrow></msub></mrow></mfrac><mo>=</mo></mrow><annotation encoding='application/x-tex'>
+  \frac{\delta_{EL} L}{\delta b_{\mu \nu}}
+  =
+ 
+
+</annotation></semantics></math></div>
 </div>
 
 <div class="revisedby">
-  Revised on November 28, 2017 08:09:10 
+  Revised on November 28, 2017 12:47:11 
   by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (46.183.103.17)
+  (178.24.247.47)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1299" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1299 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/Sandbox" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Sandbox/1300" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1300 revisions)</span> | <a href="/nlab/show/diff/Sandbox" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Sandbox" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
