--- a/pages/18806.html
+++ b/pages/18806.html
@@ -3,7 +3,7 @@
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
   <title>
-      Robert Seely in nLab
+      mix rule in nLab
   </title>
 
   <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://www.ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -283,7 +283,7 @@ margin-left: 0em;
         c9-9,20-18,33-22C159,52,166,54,170,60' />
     </svg></span>
       <span class="webName">nLab</span><br />
-      Robert Seely
+      mix rule
   </h1>
 
 
@@ -308,41 +308,65 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
-<li><a href='http://www.math.mcgill.ca/rags/'>webpage</a></li>
+    <h1 id='the_mix_rule'>The mix rule</h1>
+<div class='maruku_toc'><ul><li><a href='#definition'>Definition</a></li><li><a href='#semantics'>Semantics</a></li><li><a href='#references'>References</a></li></ul></div>
+<h2 id='definition'>Definition</h2>
+
+<p>The <strong>mix rule</strong> is an <a class='existingWikiWord' href='/nlab/show/natural+deduction'>inference rule</a> that can be added to <a class='existingWikiWord' href='/nlab/show/linear+logic'>linear logic</a>. The most common mix rule is the binary mix rule</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5648844502c50f2fa65a6c57aae56e5c2ae2948d_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mrow><mi>Γ</mi><mo>⊢</mo><mi>Δ</mi><mspace width='1em'></mspace><mi>Γ</mi><mo>′</mo><mo>⊢</mo><mi>Δ</mi><mo>′</mo></mrow><mrow><mi>Γ</mi><mo>,</mo><mi>Γ</mi><mo>′</mo><mo>⊢</mo><mi>Δ</mi><mo>,</mo><mi>Δ</mi><mo>′</mo></mrow></mfrac></mrow><annotation encoding='application/x-tex'> \frac{\Gamma\vdash \Delta \quad \Gamma&#39;\vdash\Delta&#39;}{\Gamma,\Gamma&#39; \vdash \Delta,\Delta&#39;} </annotation></semantics></math></div>
+<p>but to be consistent one should also consider the nullary mix rule</p>
+<div class='maruku-equation'><math class='maruku-mathml' display='block' id='mathml_5648844502c50f2fa65a6c57aae56e5c2ae2948d_2' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mfrac><mrow></mrow><mrow><mo>⊤</mo><mo>⊢</mo><mo>⊥</mo></mrow></mfrac></mrow><annotation encoding='application/x-tex'> \frac{ }{\top\vdash \bot} </annotation></semantics></math></div>
+<p>which together are equivalent to <math class='maruku-mathml' display='inline' id='mathml_5648844502c50f2fa65a6c57aae56e5c2ae2948d_3' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊤</mo><mo>≅</mo><mo>⊥</mo></mrow><annotation encoding='application/x-tex'>\top\cong\bot</annotation></semantics></math>, and imply “<math class='maruku-mathml' display='inline' id='mathml_5648844502c50f2fa65a6c57aae56e5c2ae2948d_4' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>-ary” mix rules for all <math class='maruku-mathml' display='inline' id='mathml_5648844502c50f2fa65a6c57aae56e5c2ae2948d_5' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>.</p>
+
+<h2 id='semantics'>Semantics</h2>
+
+<p>Ordinary linear logic has semantics in <a class='existingWikiWord' href='/nlab/show/polycategory'>polycategories</a>, <a class='existingWikiWord' href='/nlab/show/linearly+distributive+category'>linearly distributive categories</a>, and <a class='existingWikiWord' href='/nlab/show/star-autonomous+category'>star-autonomous categories</a>, depending on how many connectives are assumed. A linearly distributive category satisfies the binary mix rule if there is a morphism <math class='maruku-mathml' display='inline' id='mathml_5648844502c50f2fa65a6c57aae56e5c2ae2948d_6' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mo>⊥</mo><mo>→</mo><mo>⊤</mo></mrow><annotation encoding='application/x-tex'>\bot\to\top</annotation></semantics></math> satisfying a certain coherence axiom. It additionally satisfies the nullary mix rule if this morphism is an isomorphism. In <a href='#CS97'>CS97</a> these are called <strong>mix categories</strong> and <strong>isomix categories</strong> respectively.</p>
+
+<h2 id='references'>References</h2>
+
+<ul id='CS97'>
+<li><a class='existingWikiWord' href='/nlab/show/Robin+Cockett'>Robin Cockett</a> and <a class='existingWikiWord' href='/nlab/show/Robert+Seely'>R.A.G. Seely</a>, <em>Proof theory for full intuitionistic linear logic, bilinear logic, and mix categories</em>, 1997. <a href='http://tac.mta.ca/tac/volumes/1997/n5/3-05abs.html'>TAC</a></li>
 </ul>
-
-<h2 id='related_lab_entries'>Related <math class='maruku-mathml' display='inline' id='mathml_b73e126894b16dafb035e35056110b36318796cf_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab entries</h2>
-
-<ul>
-<li><a class='existingWikiWord' href='/nlab/show/relation+between+type+theory+and+category+theory'>relation between category theory and type theory</a></li>
-</ul>
-
-<p><div class='property'> category: <a class='category_link' href='/nlab/list/people'>people</a></div></p>
 
 <p>
+ 
+ 
+</p>
+
+<p>
+ 
+ 
+ 
+</p>
+
+<p>
+ 
+ 
+ 
+ 
+ 
  
  
 </p>
 </div>
 
 <div class="revisedby">
-  Revised on November 28, 2017 19:05:16 
+  Created on November 28, 2017 19:04:23 
   by <a class="existingWikiWord" href="/nlab/show/Mike+Shulman">Mike Shulman</a>
   (208.71.27.101)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Robert+Seely" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Robert+Seely/4" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(4 revisions)</span> | <a href="/nlab/show/diff/Robert+Seely" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Robert+Seely" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
+  <a href="/nlab/edit/mix+rule" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
   
   <span class="views">
     | Views: 
-    <a href="/nlab/print/Robert+Seely" accesskey="p" id="view_print" rel="nofollow">Print</a>
+    <a href="/nlab/print/mix+rule" accesskey="p" id="view_print" rel="nofollow">Print</a>
     | 
-    <a href="/nlab/tex/Robert+Seely" id="view_tex" rel="nofollow">TeX</a>
+    <a href="/nlab/tex/mix+rule" id="view_tex" rel="nofollow">TeX</a>
     |
-    <a href="/nlab/source/Robert+Seely" id="view_source" rel="nofollow">Source</a>
+    <a href="/nlab/source/mix+rule" id="view_source" rel="nofollow">Source</a>
   </span>
 
   
