--- a/pages/2995.html
+++ b/pages/2995.html
@@ -308,11 +308,13 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <ul>
-<li><a href='http://www.maths.dept.shef.ac.uk/maths/staff_info.php?id=348'>website</a></li>
+    <p>Nick Gurski is an assistant professor at Case Western Reserve University. Previously he was at the University of Sheffield, U.K.</p>
+
+<ul>
+<li><a href='http://casfaculty.case.edu/nick-gurski/cv/'>website</a></li>
 </ul>
 
-<h1 id='related_lab_pages'>related <math class='maruku-mathml' display='inline' id='mathml_31f9c391427fddcdfb7860f708b33be6a94a9565_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab pages</h1>
+<h1 id='related_lab_pages'>related <math class='maruku-mathml' display='inline' id='mathml_a98d91b800528b3404da2811f25f6211dfdaf16b_1' xmlns='http://www.w3.org/1998/Math/MathML'><semantics><mrow><mi>n</mi></mrow><annotation encoding='application/x-tex'>n</annotation></semantics></math>Lab pages</h1>
 
 <ul>
 <li>
@@ -328,14 +330,14 @@ margin-left: 0em;
 </div>
 
 <div class="revisedby">
-  Created on December  8, 2009 09:34:52 
-  by <a class="existingWikiWord" href="/nlab/show/Urs+Schreiber">Urs Schreiber</a>
-  (87.212.203.135)
+  Revised on November 29, 2017 01:49:23 
+  by <a class="existingWikiWord" href="/nlab/show/Tim+Porter">Tim Porter</a>
+  (2.27.42.82)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/Nick+Gurski" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/Nick+Gurski" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/Nick+Gurski/2" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(2 revisions)</span> | <a href="/nlab/show/diff/Nick+Gurski" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/Nick+Gurski" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
