--- a/pages/5805.html
+++ b/pages/5805.html
@@ -257,8 +257,8 @@ margin-left: 0em;
     //--><!]]>
   </script>
 
-  	<link href="http://nlab-local/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
-  	<link href="http://nlab-local/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_headlines" rel="alternate" title="Atom with headlines" type="application/atom+xml" />
+  	<link href="https://ncatlab.org/nlab/atom_with_content" rel="alternate" title="Atom with full content" type="application/atom+xml" />
   <script type="text/javascript">
   document.observe("dom:loaded", function() {
     generateThmNumbers();
@@ -308,18 +308,18 @@ margin-left: 0em;
 
 
 <div id="revision">
-    <p>Zekeriya Arvasi is a Turkish mathematician with expertise in category theory, especially simplicial ojects, crossed modules, algebraic models for homotopy connected types. In homotopy theory he collaborated with E. Ulualan and with E. O. Uslu.</p>
+    <p>Zekeriya Arvasi is a Turkish mathematician with expertise in category theory, especially simplicial ojects, crossed modules, algebraic models for homotopy connected types. In homotopy theory he collaborated with E. Ulualan.</p>
 </div>
 
 <div class="revisedby">
-  Created on March 30, 2011 19:55:58 
-  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous Coward</a>
-  (95.8.150.128)
+  Revised on November 29, 2017 13:09:46 
+  by <a class="existingWikiWord" href="/nlab/show/AnonymousCoward">Anonymous</a>
+  (81.213.249.215)
 </div>
 
 <div class="navigation navfoot">
 
-  <a href="/nlab/edit/zekeriya+arvasi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a>
+  <a href="/nlab/edit/zekeriya+arvasi" accesskey="E" class="navlink" id="edit" rel="nofollow">Edit</a> | <a href="/nlab/revision/zekeriya+arvasi/1" accesskey="B" class="navlink" id="to_previous_revision" rel="nofollow">Back in time</a> <span class='revisions'>(1 revision)</span> | <a href="/nlab/show/diff/zekeriya+arvasi" accesskey="C" class="navlink" id="see_changes" rel="nofollow">See changes</a> | <a href="/nlab/history/zekeriya+arvasi" accesskey="S" class="navlink" id="history" rel="nofollow">History</a>
   
   <span class="views">
     | Views: 
